--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <div>Hello my world</div>
+    <div>Hello My world</div>
 </body>
 </html>
