--- a/index.html
+++ b/index.html
@@ -1,13 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Hanalei&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
-    <div>SSSSSs</div>
+    <div class="box">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iste, eaque!</div>
+    <div class="box">Voluptas ab sapiente velit iste neque, harum dolorem ratione rem?</div>
+    <div id="item">
+        <p>Eligendi <strong>ggggg</strong> fuga explicabo deserunt velit quis it</p>
+        <p> quis <span>sssssss</span> itaque reprehenderit soluta cumque.</p>
+    </div>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias, commodi!</p>
+    <ul>
+        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae laboriosam aut eum.</li>
+        <li>Numquam officia ipsam praesentium provident perferendis? Laborum quaerat doloremque deleniti dignissimos
+            corporis.</li>
+        <li>Velit ullam quas itaque fugiat, non est. Rem nostrum asperiores cupiditate velit?</li>
+    </ul>
+    <ol>
+        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam, quibusdam?</li>
+        <li>Soluta culpa repudiandae velit obcaecati deserunt voluptatem, quod tenetur? Animi.</li>
+        <li>Unde molestias recusandae possimus inventore, minus ab dolores sit ex.</li>
+    </ol>
 </body>
+
 </html>
