--- a/index.html
+++ b/index.html
@@ -1,13 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
-    <div>SSSSSs</div>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="http://yoursite.com/example.pdf" target="_blank">Products</a></li>
+                <li><a href="http://google.com">Login</a></li>
+                <li><a href="http://google.com">About</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <article>
+            <section>
+                <header>
+                    <h1>Header 1</h1>
+                </header>
+                <div id="first"></div>
+                <div id="second"></div>
+                <div id="third"></div>
+                <div id="box">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Debitis suscipit consequatur ut
+                    minus iusto tenetur incidunt officia, iure voluptate nesciunt beatae. Pariatur quibusdam, iusto fuga
+                    maxime reprehenderit non ipsum ullam quas atque reiciendis nobis totam iste excepturi hic recusandae
+                    saepe dolores illum repellendus. Inventore laudantium, asperiores fugiat iure provident doloremque
+                    porro vel voluptate deleniti? Sequi suscipit consequatur fuga voluptate soluta laboriosam? Ipsam,
+                    possimus asperiores pariatur eaque nihil temporibus omnis excepturi, explicabo tempore voluptatum
+                    quia ut voluptas minus maxime, esse voluptates nesciunt delectus. Laudantium, autem omnis aspernatur
+                    voluptatibus error architecto dolor rem ea repudiandae delectus quas reprehenderit placeat illo
+                    aperiam ipsam.</div>
+            </section>
+
+        </article>
+    </main>
+
+    <footer>
+        <p>Copyright by Frontend Developer &copy; 2021</p>
+    </footer>
 </body>
+
 </html>
