--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <div>SSSSSs</div>
-    <img src="images/2e759bcc09be520c79241f3204e4ca8b.jpg" alt="">
+    <img src="images/2e759bcc09be520c79241f3204e4ca8b.jpg" alt="Lion">
 </body>
 
 </html>
