--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <div>SSSSSs</div>
+    <img src="img/Lion_waiting_in_Namibia.jpg" alt="Lion">
+    <div class="animation"></div>
+    <div class="anime">Lorem, ipsum</div>
+    <div class="text">Hello</div>
+    <div class="gradient"></div>
+    <div class="box">Box 1</div>
+    <div class="box1"></div>
 </body>
 </html>
