--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,7 +8,18 @@
     <title>Document</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
-    <div>SSSSSs</div>
+    <nav>
+        <ul>
+            <li>Lorem, ipsum.</li>
+            <li>Alias, sit!</li>
+            <li>Quisquam, mollitia?</li>
+        </ul>
+    </nav>
+    <div>Hello</div>
+    <p class="box">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus beatae id reiciendis dicta sit eius?
+    </p>
 </body>
+
 </html>
